# network-sniffer

./: .gitignore  PLAN.md  README.md  config.yaml.example  pyproject.toml  requirements.txt  setup.sh  sniff.sh  test_capture.py
network_sniffer/: __init__.py  cli.py  config.py
network_sniffer/alerts/: __init__.py  alert_manager.py  thresholds.py
network_sniffer/analysis/: __init__.py  bottleneck_detector.py  comparator.py  jitter_analyzer.py  latency_analyzer.py  packet_loss_detector.py
network_sniffer/capture/: __init__.py  engine.py  interface_manager.py  platform_adapter.py
network_sniffer/export/: __init__.py  csv_exporter.py  html_report.py  json_exporter.py  report.py
network_sniffer/models/: __init__.py  flow.py  metrics.py  packet.py
network_sniffer/processing/: __init__.py  flow_tracker.py  packet_processor.py
network_sniffer/storage/: __init__.py  metrics_store.py
network_sniffer/ui/: __init__.py  dashboard.py
network_sniffer/ui/widgets/: __init__.py  alerts_panel.py  bottleneck_panel.py  chart.py  comparison_panel.py  flow_table.py  interface_panel.py
